--- a/kickstart/ks.cfg
+++ b/kickstart/ks.cfg
@@ -3,7 +3,7 @@ cdrom
 eula --agreed
 lang fr_FR.UTF-8
 keyboard us
-network --onboot yes --device ens192 --bootproto dhcp
+network --device=ens192 --bootproto=static --ip=10.10.150.1 --netmask=255.255.0.0 --gateway=10.10.1.1 --nameserver=10.10.1.1 --activate
 rootpw  --plaintext root
 firewall --disabled
 authconfig --enableshadow --passalgo=sha512
@@ -24,12 +24,14 @@ repo --name="base" --baseurl="http://mirror.centos.org/centos/$releasever/os/$ba
 repo --name="updates" --baseurl="http://mirror.centos.org/centos/$releasever/updates/$basearch"
 repo --name="epel" --baseurl="http://download.fedoraproject.org/pub/epel/$releasever/$basearch"
 
-firstboot --disabled
-
-reboot
+reboot --eject
 
 %packages
 @core
+epel-release
+open-vm-tools
+vim
+bind-utils
 yum-utils
 -aic94xx-firmware
 -alsa-firmware
@@ -51,10 +53,5 @@ yum-utils
 -iwl6050-firmware
 -iwl7260-firmware
 -iwl7265-firmware
--networkmanager
-%end
-
-%post
-yum install -y epel-release
-yum install -y open-vm-tools perl
+-NetworkManager
 %end
