Adjustments for new vcenter

--- a/kickstart/ks.cfg
+++ b/kickstart/ks.cfg
@@ -3,7 +3,7 @@ cdrom
 eula --agreed
 lang fr_FR.UTF-8
 keyboard us
-network --activate
+network --device=ens192 --bootproto=dhcp --ipv6=auto --activate
 rootpw  --plaintext root
 firewall --disabled
 authconfig --enableshadow --passalgo=sha512
