--- a/kickstart/ks8.cfg
+++ b/kickstart/ks8.cfg
@@ -3,7 +3,7 @@ cdrom
 eula --agreed
 lang fr_FR.UTF-8
 keyboard --vckeymap=us-alt-intl --xlayouts='us (alt-intl)'
-network --activate
+network  --bootproto=dhcp --ipv6=auto --onboot=yes --device=ens192 --activate
 rootpw  --plaintext root
 firewall --disabled
 authconfig --enableshadow --passalgo=sha512
