Get env values from secrets

--- a/.drone.yml
+++ b/.drone.yml
@@ -5,6 +5,13 @@ name: default
 steps:
 - name: check_syntax
   image: hashicorp/packer:light
+  environment:
+    VCENTER_HOST:
+      from_secret: vcenter_host
+    VCENTER_USER:
+      from_secret: vcenter_user
+    VCENTER_PASSWORD:
+      from_secret: vcenter_password
   commands:
     - wget https://github.com/jetbrains-infra/packer-builder-vsphere/releases/download/v2.3/packer-builder-vsphere-iso.linux
     - packer validate vcenter-centos7.json
