--- a/kickstart/ks.cfg
+++ b/kickstart/ks.cfg
@@ -3,7 +3,7 @@ cdrom
 eula --agreed
 lang fr_FR.UTF-8
 keyboard us
-network --device=ens192 --bootproto=static --ip=10.10.150.1 --netmask=255.255.0.0 --gateway=10.10.1.1 --nameserver=10.10.1.1 --activate
+network --activate
 rootpw  --plaintext root
 firewall --disabled
 authconfig --enableshadow --passalgo=sha512
