--- a/kickstart/ks8.cfg
+++ b/kickstart/ks8.cfg
@@ -3,7 +3,7 @@ cdrom
 eula --agreed
 lang fr_FR.UTF-8
 keyboard --vckeymap=us-alt-intl --xlayouts='us (alt-intl)'
-network  --bootproto=static --ip=10.10.250.250 --netmask=255.255.0.0 --gateway=10.10.1.1 --nameserver=10.10.1.1  --onboot=yes --device=ens192 --activate
+network --activate
 rootpw  --plaintext root
 firewall --disabled
 authconfig --enableshadow --passalgo=sha512
