--- a/.drone.yml
+++ b/.drone.yml
@@ -32,7 +32,7 @@ steps:
     target: /kickstarts
     acl: public-read
 
-- name: build centos 7
+- name: build centos7
   image: hashicorp/packer:light
   environment:
     VCENTER_HOST:
@@ -46,7 +46,37 @@ steps:
     - packer build vcenter-centos7.json
   depends_on: [ 'check syntax' ]
 
-- name: build centos 8
+- name: build centos7 kernel ml
+  image: hashicorp/packer:light
+  environment:
+    VCENTER_HOST:
+      from_secret: vcenter_host
+    VCENTER_USER:
+      from_secret: vcenter_user
+    VCENTER_PASSWORD:
+      from_secret: vcenter_password
+    KS_MOD: kernel-ml
+  commands:
+    - wget https://github.com/jetbrains-infra/packer-builder-vsphere/releases/download/v2.3/packer-builder-vsphere-iso.linux
+    - packer build vcenter-centos7mod.json
+  depends_on: [ 'check syntax' ]
+
+- name: build centos7 kernel ml aufs
+  image: hashicorp/packer:light
+  environment:
+    VCENTER_HOST:
+      from_secret: vcenter_host
+    VCENTER_USER:
+      from_secret: vcenter_user
+    VCENTER_PASSWORD:
+      from_secret: vcenter_password
+    KS_MOD: kernel-ml-aufs
+  commands:
+    - wget https://github.com/jetbrains-infra/packer-builder-vsphere/releases/download/v2.3/packer-builder-vsphere-iso.linux
+    - packer build vcenter-centos7mod.json
+  depends_on: [ 'check syntax' ]
+
+- name: build centos8
   image: hashicorp/packer:light
   environment:
     VCENTER_HOST:
