Fix kernel-ml build

--- a/kickstart/ks-kernel-ml.cfg
+++ b/kickstart/ks-kernel-ml.cfg
@@ -9,5 +9,5 @@ repo --name=elrepo-kernel --baseurl=http://elrepo.org/linux/kernel/el7/x86_64/
 
 %packages
 kernel-ml
-kernel-ml-aufs
+kernel-ml-devel
 %end
