--- a/.drone.yml
+++ b/.drone.yml
@@ -85,3 +85,16 @@ steps:
   commands:
     - packer build vcenter-centos8.json
   depends_on: [ 'check syntax', 'upload kickstart' ]
+
+- name: build debian10
+  image: hashicorp/packer:light
+  environment:
+    VCENTER_HOST:
+      from_secret: vcenter_host
+    VCENTER_USER:
+      from_secret: vcenter_user
+    VCENTER_PASSWORD:
+      from_secret: vcenter_password
+  commands:
+    - packer build vcenter-debian10.json
+  depends_on: [ 'check syntax', 'upload kickstart' ]
