Add vim to Debian [CI SKIP]

--- a/kickstart/debian10.cfg
+++ b/kickstart/debian10.cfg
@@ -40,7 +40,7 @@ d-i passwd/root-password-again password root
 # packages
 tasksel tasksel/first multiselect
 d-i base-installer/kernel/override-image string linux-server
-d-i pkgsel/include string open-vm-tools openssh-server curl ntp sudo bzip2 ca-certificates
+d-i pkgsel/include string open-vm-tools openssh-server curl ntp sudo bzip2 ca-certificates vim
 d-i pkgsel/upgrade select full-upgrade
 d-i popularity-contest/participate boolean false
 d-i preseed/late_command string sed -i '/^deb cdrom:/s/^/#/' /target/etc/apt/sources.list
