Fix partitioning settings [CI SKIP]

--- a/kickstart/debian10.cfg
+++ b/kickstart/debian10.cfg
@@ -24,6 +24,7 @@ d-i time/zone string Europe/Paris
 d-i clock-setup/ntp boolean true
 
 # partitioning
+d-i partman-auto/method string regular
 d-i partman-partitioning/confirm_write_new_label boolean true
 d-i partman/confirm boolean true
 d-i partman/confirm_nooverwrite boolean true
@@ -34,6 +35,7 @@ d-i partman-auto/expert_recipe string myroot :: 1000 50 -1 ext4 \
      mountpoint{ / } \
     .
 d-i partman-auto/choose_recipe select myroot
+d-i partman/choose_partition select finish
 
 # users
 d-i passwd/root-login boolean true
