--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,7 @@ check_conf:
   script:
     - packer validate vcenter-centos7.json
     - packer validate vcenter-centos8.json
+    - packer validate vcenter-rhel8.json
     - packer validate vcenter-debian10.json
 
 build_centos7:
@@ -33,6 +34,13 @@ build_centos8:
     entrypoint: [""]
   stage: build
   script: packer build -force vcenter-centos8.json
+
+build_rhel8:
+  image:
+    name: hashicorp/packer:light
+    entrypoint: [""]
+  stage: build
+  script: packer build -force vcenter-rhel8.json
 
 build_debian10:
   image:
