--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ upload_ks:
     entrypoint: [""]
   stage: preparation
   script:
-    - aws --endpoint https://s3.lecat.pro s3 cp ./kickstart s3://tmp/kickstart --acl public-read --recursive
+    - aws --endpoint https://oos.eu-west-2.outscale.com s3 cp ./kickstart s3://homelab/packer_ks --acl public-read --recursive
 
 check_conf:
   image:
