Fix SSH Packer on CloudInit

--- a/kickstart/ks-fedora.cfg
+++ b/kickstart/ks-fedora.cfg
@@ -40,4 +40,5 @@ cloud-init
 
 %post
 /bin/sed -i 's/#PermitRootLogin.*/PermitRootLogin yes/g' /etc/ssh/sshd_config
+sed -i 's/ssh_pwauth:   0/ssh_pwauth:   1/g' /etc/cloud/cloud.cfg
 %end
