--- a/kickstart/ks.cfg
+++ b/kickstart/ks.cfg
@@ -57,3 +57,7 @@ cloud-init
 -iwl7265-firmware
 -NetworkManager
 %end
+
+%post
+sed -i 's/ssh_pwauth:   0/ssh_pwauth:   1/g' /etc/cloud/cloud.cfg
+%end
