Build only CentOS 8

--- a/kickstart/centos8.cfg
+++ b/kickstart/centos8.cfg
@@ -1,34 +1,18 @@
 eula --agreed
-
-clearpart --all --initlabel
-autopart --type=plain --noswap
-
+#version=RHEL8
+# Reboot after installation
+reboot
+# Use text mode install
 text
 
 url --url="http://mirror.centos.org/centos/8/BaseOS/x86_64/os/"
-repo --name="AppStream" --baseurl=http://mirror.centos.org/centos/8/BaseOS/x86_64/os/../../../AppStream/x86_64/os/
+repo --name="AppStream" --baseurl=http://mirror.centos.org/centos/8/AppStream/x86_64/os/
 
-keyboard --vckeymap=us-alt-intl --xlayouts='us (alt-intl)'
-
-lang fr_FR.UTF-8
-
-network --activate
-
-rootpw  --plaintext root
-
-firstboot --disabled
-firewall --disabled
-selinux --disabled
-
-skipx
-
-services --enabled="vmtoolsd"
-
-timezone Europe/Paris --isUtc
-
-bootloader --location=mbr --driveorder=sda --append="crashkernel=auto rhgb quiet"
-
-reboot
+%post --nochroot
+sed --follow-symlinks -i 's/ssh_pwauth:   0/ssh_pwauth:   1/g' /mnt/sysimage/etc/cloud/cloud.cfg
+sed --follow-symlinks -i "s/ rhgb quiet//" /mnt/sysimage/etc/default/grub
+sed --follow-symlinks -i "s/ rhgb quiet//" /mnt/sysimage/boot/grub2/grubenv
+%end
 
 %packages
 @^minimal-environment
@@ -39,8 +23,35 @@ cloud-init
 -iwl*firmware
 %end
 
-%post --nochroot --logfile=/mnt/sysimage/root/ks-post.log
-sed --follow-symlinks -i 's/ssh_pwauth:   0/ssh_pwauth:   1/g' /mnt/sysimage/etc/cloud/cloud.cfg
-sed --follow-symlinks -i "s/ rhgb quiet//" /mnt/sysimage/etc/default/grub
-sed --follow-symlinks -i "s/ rhgb quiet//" /mnt/sysimage/boot/grub2/grubenv
-%end
+# Keyboard layouts
+keyboard --vckeymap=us-alt-intl --xlayouts='us (alt-intl)'
+# System language
+lang fr_FR.UTF-8
+
+# Firewall configuration
+firewall --disabled
+# Network information
+network --bootproto=dhcp --device=link --activate
+network --hostname=centos8.localdomain
+
+# SELinux configuration
+selinux --disabled
+
+firstboot --disable
+# Do not configure the X Window System
+skipx
+# System services
+services --enabled="vmtoolsd"
+
+ignoredisk --only-use=sda
+# System bootloader configuration
+bootloader --append="rhgb quiet crashkernel=auto" --location=mbr --driveorder="sda" --boot-drive=sda
+autopart --type=plain --noswap
+# Partition clearing information
+clearpart --all --initlabel
+
+# System timezone
+timezone Europe/Paris --isUtc --ntpservers=10.9.0.68,10.9.0.69,10.9.0.70
+
+# Root password
+rootpw --plaintext root
