Remove unused images and reintroduce working Ubuntu 20.04 and RHEL8

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,8 @@ check_conf:
   stage: preparation
   script:
     - packer validate vcenter-centos8.json
+    - packer validate vcenter-rhel8.json
+    - packer validate vcenter-ubuntu2004.json
 
 build_centos8:
   image:
@@ -24,3 +26,17 @@ build_centos8:
     entrypoint: [""]
   stage: build
   script: packer build -force vcenter-centos8.json
+
+build_rhel8:
+  image:
+    name: hashicorp/packer:light
+    entrypoint: [""]
+  stage: build
+  script: packer build -force vcenter-rhel8.json
+
+build_rhel8:
+  image:
+    name: hashicorp/packer:light
+    entrypoint: [""]
+  stage: build
+  script: packer build -force vcenter-ubuntu2004.json
