--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,7 +34,7 @@ build_rhel8:
   stage: build
   script: packer build -force vcenter-rhel8.json
 
-build_rhel8:
+build_ubuntu2004:
   image:
     name: hashicorp/packer:light
     entrypoint: [""]
