Migrate prod to Rocky Linux 8

--- a/kickstart/rocky8.cfg
+++ b/kickstart/rocky8.cfg
@@ -5,8 +5,8 @@ reboot
 # Use text mode install
 text
 
-url --url="http://mirror.centos.org/centos/8/BaseOS/x86_64/os/"
-repo --name="AppStream" --baseurl=http://mirror.centos.org/centos/8/AppStream/x86_64/os/
+url --url="http://dl.rockylinux.org/pub/rocky/8/BaseOS/x86_64/os/"
+repo --name="AppStream" --baseurl=http://dl.rockylinux.org/pub/rocky/8/AppStream/x86_64/os/
 
 %post --nochroot
 sed --follow-symlinks -i 's/ssh_pwauth:   0/ssh_pwauth:   1/g' /mnt/sysimage/etc/cloud/cloud.cfg
@@ -16,6 +16,7 @@ sed --follow-symlinks -i "s/ rhgb quiet//" /mnt/sysimage/boot/grub2/grubenv
 
 %packages
 @^minimal-environment
+langpacks-en
 wget
 open-vm-tools
 perl
@@ -32,7 +33,7 @@ lang fr_FR.UTF-8
 firewall --disabled
 # Network information
 network --bootproto=dhcp --device=link --activate
-network --hostname=centos8.localdomain
+network --hostname=rocky8.localdomain
 
 # SELinux configuration
 selinux --disabled
