Enable non-free repo for Debian 11

--- a/kickstart/debian11/preseed.cfg
+++ b/kickstart/debian11/preseed.cfg
@@ -11,6 +11,7 @@ d-i mirror/http/hostname string httpredir.debian.org
 d-i mirror/http/directory string /debian
 d-i mirror/http/proxy string
 d-i apt-setup/services-select multiselect security, updates, backports
+d-i apt-setup/non-free boolean true
 
 ### Partitioning
 d-i partman-auto/method string regular
