--- a/kickstart/debian11/preseed.cfg
+++ b/kickstart/debian11/preseed.cfg
@@ -12,6 +12,7 @@ d-i mirror/http/directory string /debian
 d-i mirror/http/proxy string
 d-i apt-setup/services-select multiselect security, updates, backports
 d-i apt-setup/non-free boolean true
+d-i apt-setup/contrib boolean true
 
 ### Partitioning
 d-i partman-auto/method string regular
