--- a/kickstart/debian11/preseed.cfg
+++ b/kickstart/debian11/preseed.cfg
@@ -62,15 +62,12 @@ d-i user-setup/encrypt-home boolean false
 ### Package selection
 tasksel tasksel/first standard
 d-i pkgsel/include string openssh-server open-vm-tools systemd/bullseye-backports systemd-timesyncd/bullseye-backports libnss-resolve/bullseye-backports linux-image-amd64/bullseye-backports vim
-d-i pkgsel/exclude string ifupdown avahi-daemon
 d-i pkgsel/install-language-support boolean false
 d-i pkgsel/update-policy select unattended-upgrades
 d-i pkgsel/upgrade select full-upgrade
 
 ### Finish
 d-i preseed/late_command string \
-    sed -i 's/#PermitRootLogin .*/PermitRootLogin yes/g' /target/etc/ssh/sshd_config; \
-    echo '%sudo ALL=(ALL) NOPASSWD:ALL' > /target/etc/sudoers.d/sudo-nopassword; \
-    in-target systemctl unmask systemd-timesyncd; \
-    in-target systemctl enable open-vm-tools systemd-networkd systemd-timesyncd systemd-resolved;
+    wget -O /target/tmp/prep.sh "https://oos.eu-west-2.outscale.com/homelab/packer_ks/debian11/prep.sh"; \
+    in-target /bin/bash /tmp/prep.sh
 d-i finish-install/reboot_in_progress note
