Always run CI except for pushes (2)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,8 +29,7 @@ build_debian:
   stage: build
   script: packer build -force vcenter-debian11.pkr.hcl
   rules:
-    - if: $CI_PIPELINE_SOURCE == "push"
-      when: never
+    - if: $CI_PIPELINE_SOURCE != "push"
 
 build_windows:
   image:
@@ -41,5 +40,4 @@ build_windows:
     - packer init -upgrade vcenter-windows-server.pkr.hcl
     - packer build -force vcenter-windows-server.pkr.hcl
   rules:
-    - if: $CI_PIPELINE_SOURCE == "push"
-      when: never
+    - if: $CI_PIPELINE_SOURCE != "push"
