--- a/kickstart/debian11/preseed.cfg
+++ b/kickstart/debian11/preseed.cfg
@@ -61,7 +61,7 @@ d-i user-setup/encrypt-home boolean false
 
 ### Package selection
 tasksel tasksel/first standard
-d-i pkgsel/include string openssh-server open-vm-tools systemd/bullseye-backports systemd-sysv/bullseye-backports systemd-timesyncd/bullseye-backports libnss-resolve/bullseye-backports linux-image-amd64/bullseye-backports vim
+d-i pkgsel/include string openssh-server open-vm-tools systemd/bullseye-backports systemd-sysv/bullseye-backports systemd-timesyncd/bullseye-backports libnss-resolve/bullseye-backports linux-image-amd64/bullseye-backports vim cloud-init
 d-i pkgsel/install-language-support boolean false
 d-i pkgsel/update-policy select unattended-upgrades
 d-i pkgsel/upgrade select full-upgrade
