Don't other-os in grub

--- a/kickstart/debian11/preseed.cfg
+++ b/kickstart/debian11/preseed.cfg
@@ -48,7 +48,7 @@ d-i partman/mount_style select label
 
 ### Bootloader
 d-i grub-installer/only_debian boolean true
-d-i grub-installer/with_other_os boolean true
+d-i grub-installer/with_other_os boolean false
 d-i grub-installer/bootdev string /dev/sda
 
 ### Account setup
