--- a/kickstart/debian11/preseed.cfg
+++ b/kickstart/debian11/preseed.cfg
@@ -60,7 +60,7 @@ d-i user-setup/allow-password-weak boolean true
 d-i user-setup/encrypt-home boolean false
 
 ### Package selection
-tasksel tasksel/first standard
+tasksel tasksel/first multiselect standard
 d-i pkgsel/include string openssh-server open-vm-tools vim cloud-init
 d-i pkgsel/install-language-support boolean false
 d-i pkgsel/update-policy select unattended-upgrades
