Use XFS for Debian root

--- a/kickstart/debian11/preseed.cfg
+++ b/kickstart/debian11/preseed.cfg
@@ -25,15 +25,12 @@ d-i partman-auto/expert_recipe string           \
             format{ }                           \
             mountpoint{ /boot/efi }             \
         .                                       \
-        8000 1 -1 ext4                          \
+        8000 1 -1 xfs                           \
             method{ format }                    \
             format{ }                           \
             use_filesystem{ }                   \
-            filesystem{ ext4 }                  \
+            filesystem{ xfs }                   \
             mountpoint{ / }                     \
-            options/discard{ discard }          \
-            options/noatime{ noatime }          \
-            options/nodiratime{ nodiratime }    \
         .
 d-i partman-efi/non_efi_system boolean true
 d-i partman-partitioning/choose_label string gpt
